--- a/SET1/.well-known/index.html
+++ b/SET1/.well-known/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<meta http-equiv="refresh" content="0; URL="https://raw.githubusercontent.com/mRuggi/StellarQuestPythonSDK/main/SET1/.well-known/stellar.toml">
+<meta http-equiv="refresh" content="0; URL=https://raw.githubusercontent.com/mRuggi/StellarQuestPythonSDK/main/SET1/.well-known/stellar.toml>
 <link rel="canonical" href="https://raw.githubusercontent.com/mRuggi/StellarQuestPythonSDK/main/SET1/.well-known/stellar.toml">
