--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-   {% assign doclist = site.pages | sort: 'url'  %}
+   <!DOCTYPE html>
+<html>
+
+{% assign doclist = site.pages | sort: 'url'  %}
     <ul>
        {% for doc in doclist %}
             {% if doc.name contains '.md' or doc.name contains '.html' %}
@@ -6,3 +9,8 @@
             {% endif %}
         {% endfor %}
     </ul>
+
+
+</html>
+
+
