--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
    <!DOCTYPE html>
 <html>
 
-#!/bin/bash
+---
+---
 
-ROOT=/tmp/test
-HTTP="/"
-OUTPUT="_includes/site-index.html" 
+<head>
+  <title>Index of /</title>
+</head>
 
-i=0
-echo "<UL>" > $OUTPUT
-for filepath in `find "$ROOT" -maxdepth 1 -mindepth 1 -type d| sort`; do
-  path=`basename "$filepath"`
-  echo "  <LI>$path</LI>" >> $OUTPUT
-  echo "  <UL>" >> $OUTPUT
-  for i in `find "$filepath" -maxdepth 1 -mindepth 1 -type f| sort`; do
-    file=`basename "$i"`
-    echo "    <LI><a href=\"/$path/$file\">$file</a></LI>" >> $OUTPUT
-  done
-  echo "  </UL>" >> $OUTPUT
-done
-echo "</UL>" >> $OUTPUT
+<body>
+  <h1>Index of /</h1>
+  <ul>
+    {% for url in site.static_files %}
+    <li><a href="{{ site.baseurl | escape }}{{ url.path | escape }}">{{ url.path | escape }}</a> </li>
+    {% endfor %}
+  </ul>
+</body>
    
 </html>
 
